<resources>
    <string name="app_name">Fitbike Connector</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Street View</string>

    <!-- Notification and WorkManager -->
    <string name="work_request_unique">USB reader worker</string>
    <!-- Settings fragment -->
    <string name="tap_to_connect">Connect (Read QR Code)</string>

    <!-- Upload Preferences -->
    <string name="upload_title">Upload your data</string>
    <string name="upload_summary_on">Send data and connect to Street View Runner</string>
    <string name="upload_summary_off">Stand alone mode (not upload your data)</string>

    <!-- SharedPreferences keys-->
    <string name="pref_always_on">alwayson</string>
    <string name="pref_upload">upload</string>
    <string name="pref_read_qr">read_QRCode</string>
    <string name="pref_username">username</string>
    <string name="pref_userid">userid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>